# libpdfops

./: CMakeLists.txt  README.md
include/: PdfOps.h
src/: ExtractPages.cpp  PageCount.cpp  PdfOps.cpp  extractpdf.cpp  unitepdf.cpp
